fix: fix check mark shift for retina

--- a/src/popup/styles/_filter.scss
+++ b/src/popup/styles/_filter.scss
@@ -37,11 +37,16 @@
 
   &-mark {
     display: block;
-    width: 0.9rem;
-    height: 0.9rem;
+    width: 1rem;
+    height: 1rem;
     background-color: $twitch-purple;
     opacity: 0;
     transition: opacity $t-x1;
+
+    @media (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
+      width: 0.9rem;
+      height: 0.9rem;
+    }
   }
 
   #input-flip:checked ~ * &-mark {
